@@ -22,6 +22,10 @@
  */
 package org.openjdk.skara.mailinglist.mailman;
 
+import java.nio.charset.StandardCharsets;
+import java.time.format.DateTimeFormatter;
+import java.util.zip.GZIPInputStream;
+import java.util.zip.Inflater;
 import org.openjdk.skara.email.*;
 import org.openjdk.skara.mailinglist.*;
 
@@ -34,14 +38,14 @@ import java.util.concurrent.*;
 import java.util.logging.Logger;
 import java.util.stream.Collectors;
 import org.openjdk.skara.metrics.Counter;
+import org.openjdk.skara.network.URIBuilder;
 
-public class MailmanListReader implements MailingListReader {
-    private final MailmanServer server;
+public abstract class MailmanListReader implements MailingListReader {
     private final boolean useEtag;
-    private final List<String> names = new ArrayList<>();
+    protected final List<String> names = new ArrayList<>();
     private final Logger log = Logger.getLogger("org.openjdk.skara.mailinglist");
-    private final ConcurrentMap<URI, HttpResponse<String>> pageCache = new ConcurrentHashMap<>();
-    private List<Conversation> cachedConversations = new ArrayList<>();
+    protected final ConcurrentMap<URI, HttpResponse<byte[]>> pageCache = new ConcurrentHashMap<>();
+    protected List<Conversation> cachedConversations = new ArrayList<>();
     private static final HttpClient client = HttpClient.newBuilder()
                                                        .connectTimeout(Duration.ofSeconds(10))
                                                        .build();
@@ -49,8 +53,7 @@ public class MailmanListReader implements MailingListReader {
     private static final Counter.WithOneLabel POLLING_COUNTER =
             Counter.name("skara_mailman_polling").labels("code").register();
 
-    MailmanListReader(MailmanServer server, Collection<String> names, boolean useEtag) {
-        this.server = server;
+    MailmanListReader(Collection<String> names, boolean useEtag) {
         this.useEtag = useEtag;
         for (var name : names) {
             if (name.contains("@")) {
@@ -61,29 +64,7 @@ public class MailmanListReader implements MailingListReader {
         }
     }
 
-    @Override
-    public String toString() {
-        return "MailmanList:" + String.join(", ", names);
-    }
-
-    private List<ZonedDateTime> getMonthRange(Duration maxAge) {
-        var now = ZonedDateTime.now();
-        var start = now.minus(maxAge);
-        List<ZonedDateTime> ret = new ArrayList<>();
-
-        // Iterate all the way until start is equal to now
-        while (!start.isAfter(now)) {
-            ret.add(start);
-            var next = start.plus(Duration.ofDays(1));
-            while (start.getMonthValue() == next.getMonthValue()) {
-                next = next.plus(Duration.ofDays(1));
-            }
-            start = next;
-        }
-        return ret;
-    }
-
-    private Optional<HttpResponse<String>> getPage(URI uri) {
+    protected Optional<HttpResponse<byte[]>> getPage(URI uri) {
         var requestBuilder = HttpRequest.newBuilder(uri)
                                         .timeout(Duration.ofSeconds(30))
                                         .GET();
@@ -96,7 +77,7 @@ public class MailmanListReader implements MailingListReader {
 
         var request = requestBuilder.build();
         try {
-            HttpResponse<String> response = client.send(request, HttpResponse.BodyHandlers.ofString());
+            HttpResponse<byte[]> response = client.send(request, HttpResponse.BodyHandlers.ofByteArray());
             POLLING_COUNTER.labels(String.valueOf(response.statusCode())).inc();
             if (response.statusCode() == 200) {
                 pageCache.put(uri, response);
@@ -118,34 +99,73 @@ public class MailmanListReader implements MailingListReader {
         }
     }
 
+    protected void updateCachedConversations(ArrayList<Email> emails, Duration maxAge) {
+        var conversations = Mbox.parseMbox(emails);
+        var threshold = ZonedDateTime.now().minus(maxAge);
+        cachedConversations = conversations.stream()
+                .filter(mail -> mail.first().date().isAfter(threshold))
+                .collect(Collectors.toList());
+    }
+}
+
+class Mailman2ListReader extends MailmanListReader {
+    private final Mailman2Server server;
+
+    Mailman2ListReader(Mailman2Server server, Collection<String> names, boolean useEtag) {
+        super(names, useEtag);
+        this.server = server;
+    }
+
+    @Override
+    public String toString() {
+        return "Mailman2List:" + String.join(", ", names);
+    }
+
+    private List<ZonedDateTime> getMonthRange(Duration maxAge) {
+        var now = ZonedDateTime.now();
+        var start = now.minus(maxAge);
+        List<ZonedDateTime> ret = new ArrayList<>();
+
+        // Iterate all the way until start is equal to now
+        while (!start.isAfter(now)) {
+            ret.add(start);
+            var next = start.plus(Duration.ofDays(1));
+            while (start.getMonthValue() == next.getMonthValue()) {
+                next = next.plus(Duration.ofDays(1));
+            }
+            start = next;
+        }
+        return ret;
+    }
+
     @Override
     public List<Conversation> conversations(Duration maxAge) {
         // Order pages by most recent first
         var potentialPages = getMonthRange(maxAge).stream()
                                                   .sorted(Comparator.reverseOrder())
-                                                  .collect(Collectors.toList());
+                                                  .toList();
 
         var monthCount = 0;
         var newContent = false;
         var emails = new ArrayList<Email>();
         for (var month : potentialPages) {
             for (var name : names) {
-                URI mboxUri = server.getMbox(name, month);
+                URI mboxUri = server.getMboxUri(name, month);
                 var sender = EmailAddress.from(name + "@" + mboxUri.getHost());
 
                 // For archives older than the previous month, always use cached results
                 if (monthCount > 1 && pageCache.containsKey(mboxUri)) {
                     var cachedResponse = pageCache.get(mboxUri);
                     if (cachedResponse != null && cachedResponse.statusCode() != 404) {
-                        emails.addAll(0, Mbox.splitMbox(cachedResponse.body(), sender));
+                        emails.addAll(0, Mbox.splitMbox(new String(cachedResponse.body(), StandardCharsets.UTF_8), sender));
                     }
                 } else {
                     var mboxResponse = getPage(mboxUri);
                     if (mboxResponse.isPresent()) {
                         if (mboxResponse.get().statusCode() == 304) {
-                            emails.addAll(0, Mbox.splitMbox(pageCache.get(mboxUri).body(), sender));
+                            emails.addAll(0, Mbox.splitMbox(new String(pageCache.get(mboxUri).body(), StandardCharsets.UTF_8), sender));
                         } else {
-                            emails.addAll(0, Mbox.splitMbox(mboxResponse.get().body(), sender));
+                            emails.addAll(0, Mbox.splitMbox(new String(mboxResponse.get().body(), StandardCharsets.UTF_8), sender));
                             newContent = true;
                         }
                     }
@@ -155,13 +175,85 @@ public class MailmanListReader implements MailingListReader {
         }
 
         if (newContent) {
-            var conversations = Mbox.parseMbox(emails);
-            var threshold = ZonedDateTime.now().minus(maxAge);
-            cachedConversations = conversations.stream()
-                                       .filter(mail -> mail.first().date().isAfter(threshold))
-                                       .collect(Collectors.toList());
+            updateCachedConversations(emails, maxAge);
         }
 
         return cachedConversations;
+    }
+}
+
+class Mailman3ListReader extends MailmanListReader {
+    private final Mailman3Server server;
+
+    Mailman3ListReader(Mailman3Server server, Collection<String> names, boolean useEtag) {
+        super(names, useEtag);
+        this.server = server;
+    }
+
+    @Override
+    public List<Conversation> conversations(Duration maxAge) {
+        var now = ZonedDateTime.now();
+        var start = now.minus(maxAge).withDayOfMonth(1);
+        var query = Map.of("start", List.of(start.format(DateTimeFormatter.ISO_LOCAL_DATE)));
+        var emails = new ArrayList<Email>();
+        var newContent = false;
+        // https://mail-dev.example.com/archives/list/skara-test@mail-dev.example.com/export/foo.mbox.gz?start=2024-10-25&end=2025-10-25
+        for (String name : names) {
+            var mboxUri = URIBuilder.base(server.getArchiveUri()).appendPath("list/").appendPath(name)
+                    .appendPath("@").appendPath(server.getArchiveUri().getHost())
+                    .appendPath("/export/foo.mbox.gz").setQuery(query).build();
+            var mboxResponse = getPage(mboxUri);
+            if (mboxResponse.isPresent()) {
+                var sender = EmailAddress.from(name + "@" + server.getArchiveUri().getHost());
+                if (mboxResponse.get().statusCode() == 304) {
+                    emails.addAll(0, Mbox.splitMbox(gunzipToString(pageCache.get(mboxUri).body()), sender));
+                } else {
+                    emails.addAll(0, Mbox.splitMbox(gunzipToString(mboxResponse.get().body()), sender));
+                    newContent = true;
+                }
+            }
+        }
+
+        if (newContent) {
+            updateCachedConversations(emails, maxAge);
+        }
+
+        return cachedConversations;
+    }
+
+    private String gunzipToString(byte[] data) {
+        try (var in = new InputStreamReader(new GZIPInputStream(new ByteArrayInputStream(data)), StandardCharsets.UTF_8)) {
+            var out = new StringBuilderWriter();
+            in.transferTo(out);
+            return out.toString();
+        } catch (IOException e) {
+            throw new UncheckedIOException(e);
+        }
+    }
+
+    /**
+     * Simple StringWriter clone that uses a StringBuilder instead of a StringBuffer.
+     */
+    private static class StringBuilderWriter extends Writer {
+
+        private final StringBuilder buf = new StringBuilder();
+
+        @Override
+        public String toString() {
+            return buf.toString();
+        }
+
+        @Override
+        public void write(char[] cbuf, int off, int len) {
+            buf.append(cbuf, off, len);
+        }
+
+        @Override
+        public void flush() {
+        }
+
+        @Override
+        public void close() {
+        }
     }
 }
